# zeno-evals-hub

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
.zeno_cache/: reports.pickle  slices.pickle
evals/: evals.yaml
evals/.zeno_cache_aba-mrpc/: OUTPUTgpt-3_5-turbo.pickle  OUTPUTgpt-4.pickle  POSTDISTILLcorrectgpt-3_5-turbo.pickle  POSTDISTILLcorrectgpt-4.pickle
evals/.zeno_cache_country-area/: OUTPUTgpt-3_5-turbo.pickle  OUTPUTgpt-4.pickle  POSTDISTILLcorrectgpt-3_5-turbo.pickle  POSTDISTILLcorrectgpt-4.pickle  PREDISTILLarea.pickle  reports.pickle  slices.pickle
evals/.zeno_cache_crossword/: OUTPUTgpt-3_5-turbo.pickle  OUTPUTgpt-4.pickle  POSTDISTILLcorrectgpt-3_5-turbo.pickle  POSTDISTILLcorrectgpt-4.pickle  PREDISTILLanswer_length.pickle  PREDISTILLnumber_of_blanks.pickle  PREDISTILLword_freq.pickle  folders.pickle  reports.pickle  slices.pickle  view.mjs
evals/.zeno_cache_emotional-intelligence/: OUTPUTgpt-3_5-turbo-0301.pickle  OUTPUTgpt-3_5-turbo.pickle  POSTDISTILLcorrectgpt-3_5-turbo-0301.pickle  POSTDISTILLcorrectgpt-3_5-turbo.pickle
evals/.zeno_cache_logic/: OUTPUTgpt-4.pickle  POSTDISTILLcorrectgpt-3_5-turbo.pickle
evals/.zeno_cache_logic-statements/: OUTPUTgpt-3_5-turbo.pickle  POSTDISTILLcorrectgpt-4.pickle
evals/.zeno_cache_med-mcqa/: OUTPUTgpt-3_5-turbo.pickle  OUTPUTgpt-4.pickle  PREDISTILLsubject.pickle  (+5 more)
frontend/: build.js  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
zeno-evals-hub/: __init__.py  main.py  runner.py
(+32 files in other folders)
