[tool.poetry]
name = "zeno-evals-hub"
version = "0.1.0"
description = ""
authors = ["Alex Cabrera <alex.cabrera@gmail.com>"]
readme = "README.md"
packages = [{ include = "zeno-evals-hub" }]
include = ["zeno-evals-hub/frontend/**/*"]

[tool.poetry.dependencies]
zenoml = "^0.4.10"
python = "^3.9.0,<=3.11"
fastapi = "^0.95.2"
uvicorn = "^0.21.1"
zeno-evals = "^0.1.10"
pyyaml = "^6.0"
wordfreq = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
usort = "^1.0.6"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pyright = "^1.1.302"
prettier = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["zeno-evals-hub"]
useLibraryCodeForTypes = true
